--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "cd server && node server.js",
+    "start": "node server.js",
     "server": "nodemon server.js"
   },
   "dependencies": {
