--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://alijardariasif123:asif123@cluster0.8v0sm.mongodb.net
+MONGODB_URI=mongodb+srv://alijardariasif123:asif123@cluster0.8v0sm.mongodb.net/dbname?retryWrites=true&w=majority&tls=true
