--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb+srv://alijardariasif123:asif123@cluster0.8v0sm.mongodb.net/dbname?retryWrites=true&w=majority&tls=true
+# /dbname?retryWrites=true&w=majority&tls=true
+MONGODB_URI='mongodb+srv://alijardariasif123:asif123@cluster0.8v0sm.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_3bxKA0iM8UBnq09JqN682QqZrT0WWRaq'
