--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 # /dbname?retryWrites=true&w=majority&tls=true
-MONGODB_URI='mongodb+srv://alijardariasif123:11201120@cluster0.8v0sm.mongodb.net/'
-CLERK_WEBHOOK_SECRET = 'whsec_s7aW2pbOhthMXvyhfqMK0Xx3/VXYi1TQ'
+MONGODB_URI='mongodb+srv://alijardariasif123:11201120@cluster0.8v0sm.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_1GrW5WacfNCuALAWnsmRJg0pBAi51BFl'
