--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.1",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "dom": "^0.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
